// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatherSelect.vue should not raise the label when its empty 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-v-6f68d0ea=""
  >
    
    <div
      class="feather-input-wrapper-container feather-select-wrapper"
      data-v-47a74f22=""
      menu-trigger=""
    >
      <fieldset
        aria-hidden="true"
        class="feather-input-border"
        data-v-47a74f22=""
      >
        <legend
          data-v-47a74f22=""
        >
          Users
        </legend>
      </fieldset>
      <label
        class="feather-input-label"
        data-ref-id="feather-form-element-label"
        data-v-47a74f22=""
        for="feather-select-input"
        style="left: 16px;"
      >
        Users
      </label>
      <div
        class="feather-input-wrapper"
        data-v-47a74f22=""
      >
        <div
          class="prefix"
          data-v-47a74f22=""
        >
          
          
        </div>
        
        <input
          aria-describedby=" feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
          data-v-47a74f22=""
        >
          <!---->
          <!---->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <div
      class="feather-menu-dropdown bottom-left"
      data-v-6f68d0ea=""
      id="feather-menu-dropdown"
      style="display: none;"
    >
      
      <ul
        aria-activedescendant="feather-select-active"
        aria-label="Users"
        class="feather-list feather-select-options-list"
        data-ref-id="feather-select-list"
        data-v-4ef0e6d6=""
        role="listbox"
        tabindex="-1"
      >
        
        
      </ul>
      
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-764b8d6b=""
    id="feather-select-description"
    style="display: none;"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should raise the label when it has a value 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-v-6f68d0ea=""
  >
    
    <div
      class="feather-input-wrapper-container raised feather-select-wrapper"
      data-v-47a74f22=""
      menu-trigger=""
    >
      <fieldset
        aria-hidden="true"
        class="feather-input-border"
        data-v-47a74f22=""
      >
        <legend
          data-v-47a74f22=""
        >
          Users
        </legend>
      </fieldset>
      <label
        class="feather-input-label"
        data-ref-id="feather-form-element-label"
        data-v-47a74f22=""
        for="feather-select-input"
        style="left: 12px;"
      >
        Users
      </label>
      <div
        class="feather-input-wrapper"
        data-v-47a74f22=""
      >
        <div
          class="prefix"
          data-v-47a74f22=""
        >
          
          
        </div>
        
        <input
          aria-describedby=" feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
          data-v-47a74f22=""
        >
          <!---->
          <!---->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <div
      class="feather-menu-dropdown bottom-left"
      data-v-6f68d0ea=""
      id="feather-menu-dropdown"
      style="display: none;"
    >
      
      <ul
        aria-activedescendant="feather-select-active"
        aria-label="Users"
        class="feather-list feather-select-options-list"
        data-ref-id="feather-select-list"
        data-v-4ef0e6d6=""
        role="listbox"
        tabindex="-1"
      >
        
        
      </ul>
      
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-764b8d6b=""
    id="feather-select-description"
    style="display: none;"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should render in disabled state 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-v-6f68d0ea=""
  >
    
    <div
      class="feather-input-wrapper-container disabled feather-select-wrapper"
      data-v-47a74f22=""
      menu-trigger=""
    >
      <fieldset
        aria-hidden="true"
        class="feather-input-border"
        data-v-47a74f22=""
      >
        <legend
          data-v-47a74f22=""
        >
          Users
        </legend>
      </fieldset>
      <label
        class="feather-input-label"
        data-ref-id="feather-form-element-label"
        data-v-47a74f22=""
        for="feather-select-input"
        style="left: 16px;"
      >
        Users
      </label>
      <div
        class="feather-input-wrapper"
        data-v-47a74f22=""
      >
        <div
          class="prefix"
          data-v-47a74f22=""
        >
          
          
        </div>
        
        <input
          aria-describedby=" feather-select-description"
          aria-disabled="true"
          aria-haspopup="listbox"
          aria-invalid="false"
          class="feather-select-input"
          data-ref-id="feather-input"
          disabled=""
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
          data-v-47a74f22=""
        >
          <!---->
          <!---->
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <div
      class="feather-menu-dropdown bottom-left"
      data-v-6f68d0ea=""
      id="feather-menu-dropdown"
      style="display: none;"
    >
      
      <ul
        aria-activedescendant="feather-select-active"
        aria-label="Users"
        class="feather-list feather-select-options-list"
        data-ref-id="feather-select-list"
        data-v-4ef0e6d6=""
        role="listbox"
        tabindex="-1"
      >
        
        
      </ul>
      
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-764b8d6b=""
    id="feather-select-description"
    style="display: none;"
  >
    <!---->
    <!---->
    
    
  </div>
</div>
`;

exports[`FeatherSelect.vue should render in error state 1`] = `
<div
  class="feather-select-container"
>
  <div
    class="feather-menu feather-select-menu-container"
    data-v-6f68d0ea=""
  >
    
    <div
      class="feather-input-wrapper-container error feather-select-wrapper"
      data-v-47a74f22=""
      menu-trigger=""
    >
      <fieldset
        aria-hidden="true"
        class="feather-input-border"
        data-v-47a74f22=""
      >
        <legend
          data-v-47a74f22=""
        >
          Users
        </legend>
      </fieldset>
      <label
        class="feather-input-label"
        data-ref-id="feather-form-element-label"
        data-v-47a74f22=""
        for="feather-select-input"
        style="left: 16px;"
      >
        Users
      </label>
      <div
        class="feather-input-wrapper"
        data-v-47a74f22=""
      >
        <div
          class="prefix"
          data-v-47a74f22=""
        >
          
          
        </div>
        
        <input
          aria-describedby=" feather-select-description"
          aria-disabled="false"
          aria-haspopup="listbox"
          aria-invalid="true"
          class="feather-select-input"
          data-ref-id="feather-input"
          id="feather-select-input"
          readonly=""
        />
        
        <div
          class="post"
          data-v-47a74f22=""
        >
          <!---->
          <svg
            aria-hidden="true"
            class="error-icon hide-when-disabled feather-icon error-icon hide-when-disabled"
            data-v-0aa06a12=""
            data-v-329cf64a=""
            data-v-47a74f22=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8,8,0,0,1,12,20Z"
            />
            <rect
              height="7"
              rx="1"
              width="2"
              x="11"
              y="7"
            />
            <rect
              height="2"
              rx="0.65"
              width="2"
              x="11"
              y="15"
            />
          </svg>
          
          <svg
            aria-hidden="true"
            class="feather-select-icon feather-icon feather-select-icon"
            data-v-0aa06a12=""
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6.7,9.29a1,1,0,0,0,0,1.41L12,16l5.3-5.3a1,1,0,0,0-1.41-1.41L12,13.17,8.11,9.29A1,1,0,0,0,6.7,9.29Z"
            />
          </svg>
          
        </div>
      </div>
    </div>
    
    <div
      class="feather-menu-dropdown bottom-left"
      data-v-6f68d0ea=""
      id="feather-menu-dropdown"
      style="display: none;"
    >
      
      <ul
        aria-activedescendant="feather-select-active"
        aria-label="Users"
        class="feather-list feather-select-options-list"
        data-ref-id="feather-select-list"
        data-v-4ef0e6d6=""
        role="listbox"
        tabindex="-1"
      >
        
        
      </ul>
      
    </div>
  </div>
  <div
    class="feather-input-sub-text"
    data-v-764b8d6b=""
    id="feather-select-description"
  >
    <!---->
    <div
      aria-live="assertive"
      class="feather-input-error"
      data-ref-id="feather-form-element-error"
      data-v-764b8d6b=""
    >
      ERROR
    </div>
    
    
  </div>
</div>
`;
